libqt6c/src/libqlocale.hpp

typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QLocale QLocale;
typedef struct QTime QTime;
QLocale* QLocale_new();
QLocale* QLocale_new2(const libqt_string name);
QLocale* QLocale_new3(uint16_t language, uint16_t territory);
QLocale* QLocale_new4(uint16_t language);
QLocale* QLocale_new5(const QLocale* other);
QLocale* QLocale_new6(uint16_t language, uint16_t script);
QLocale* QLocale_new7(uint16_t language, uint16_t script, uint16_t territory);
void QLocale_OperatorAssign(QLocale* self, const QLocale* other);
void QLocale_Swap(QLocale* self, QLocale* other);
uint16_t QLocale_Language(const QLocale* self);
uint16_t QLocale_Script(const QLocale* self);
uint16_t QLocale_Territory(const QLocale* self);
uint16_t QLocale_Country(const QLocale* self);
libqt_string QLocale_Name(const QLocale* self);
libqt_string QLocale_Bcp47Name(const QLocale* self);
libqt_string QLocale_NativeLanguageName(const QLocale* self);
libqt_string QLocale_NativeTerritoryName(const QLocale* self);
libqt_string QLocale_NativeCountryName(const QLocale* self);
int16_t QLocale_ToShort(const QLocale* self, const libqt_string s);
uint16_t QLocale_ToUShort(const QLocale* self, const libqt_string s);
int QLocale_ToInt(const QLocale* self, const libqt_string s);
unsigned int QLocale_ToUInt(const QLocale* self, const libqt_string s);
long QLocale_ToLong(const QLocale* self, const libqt_string s);
unsigned long QLocale_ToULong(const QLocale* self, const libqt_string s);
long long QLocale_ToLongLong(const QLocale* self, const libqt_string s);
unsigned long long QLocale_ToULongLong(const QLocale* self, const libqt_string s);
float QLocale_ToFloat(const QLocale* self, const libqt_string s);
double QLocale_ToDouble(const QLocale* self, const libqt_string s);
libqt_string QLocale_ToString(const QLocale* self, long long i);
libqt_string QLocale_ToString2(const QLocale* self, unsigned long long i);
libqt_string QLocale_ToString3(const QLocale* self, long i);
libqt_string QLocale_ToString4(const QLocale* self, unsigned long i);
libqt_string QLocale_ToString5(const QLocale* self, int16_t i);
libqt_string QLocale_ToString6(const QLocale* self, uint16_t i);
libqt_string QLocale_ToString7(const QLocale* self, int i);
libqt_string QLocale_ToString8(const QLocale* self, unsigned int i);
libqt_string QLocale_ToString9(const QLocale* self, double f);
libqt_string QLocale_ToString10(const QLocale* self, float f);
libqt_string QLocale_ToString11(const QLocale* self, QDate* date, const libqt_string format);
libqt_string QLocale_ToString12(const QLocale* self, QTime* time, const libqt_string format);
libqt_string QLocale_ToString13(const QLocale* self, const QDateTime* dateTime, const libqt_string format);
libqt_string QLocale_ToString17(const QLocale* self, QDate* date);
libqt_string QLocale_ToString18(const QLocale* self, QTime* time);
libqt_string QLocale_ToString19(const QLocale* self, const QDateTime* dateTime);
libqt_string QLocale_ToString21(const QLocale* self, QDate* date, int format, QCalendar* cal);
libqt_string QLocale_ToString22(const QLocale* self, const QDateTime* dateTime, int format, QCalendar* cal);
libqt_string QLocale_DateFormat(const QLocale* self);
libqt_string QLocale_TimeFormat(const QLocale* self);
libqt_string QLocale_DateTimeFormat(const QLocale* self);
QDate* QLocale_ToDate(const QLocale* self, const libqt_string stringVal);
QTime* QLocale_ToTime(const QLocale* self, const libqt_string stringVal);
QDateTime* QLocale_ToDateTime(const QLocale* self, const libqt_string stringVal);
QDate* QLocale_ToDate2(const QLocale* self, const libqt_string stringVal, const libqt_string format);
QTime* QLocale_ToTime2(const QLocale* self, const libqt_string stringVal, const libqt_string format);
QDateTime* QLocale_ToDateTime2(const QLocale* self, const libqt_string stringVal, const libqt_string format);
QDate* QLocale_ToDate3(const QLocale* self, const libqt_string stringVal, int format, QCalendar* cal);
QDateTime* QLocale_ToDateTime3(const QLocale* self, const libqt_string stringVal, int format, QCalendar* cal);
QDate* QLocale_ToDate4(const QLocale* self, const libqt_string stringVal, const libqt_string format, QCalendar* cal);
QDateTime* QLocale_ToDateTime4(const QLocale* self, const libqt_string stringVal, const libqt_string format, QCalendar* cal);
libqt_string QLocale_DecimalPoint(const QLocale* self);
libqt_string QLocale_GroupSeparator(const QLocale* self);
libqt_string QLocale_Percent(const QLocale* self);
libqt_string QLocale_ZeroDigit(const QLocale* self);
libqt_string QLocale_NegativeSign(const QLocale* self);
libqt_string QLocale_PositiveSign(const QLocale* self);
libqt_string QLocale_Exponential(const QLocale* self);
libqt_string QLocale_MonthName(const QLocale* self, int param1);
libqt_string QLocale_StandaloneMonthName(const QLocale* self, int param1);
libqt_string QLocale_DayName(const QLocale* self, int param1);
libqt_string QLocale_StandaloneDayName(const QLocale* self, int param1);
int QLocale_FirstDayOfWeek(const QLocale* self);
libqt_list /* of int */ QLocale_Weekdays(const QLocale* self);
libqt_string QLocale_AmText(const QLocale* self);
libqt_string QLocale_PmText(const QLocale* self);
int QLocale_MeasurementSystem(const QLocale* self);
QLocale* QLocale_Collation(const QLocale* self);
int QLocale_TextDirection(const QLocale* self);
libqt_string QLocale_ToUpper(const QLocale* self, const libqt_string str);
libqt_string QLocale_ToLower(const QLocale* self, const libqt_string str);
libqt_string QLocale_CurrencySymbol(const QLocale* self);
libqt_string QLocale_ToCurrencyString(const QLocale* self, long long param1);
libqt_string QLocale_ToCurrencyString2(const QLocale* self, unsigned long long param1);
libqt_string QLocale_ToCurrencyString3(const QLocale* self, int16_t i);
libqt_string QLocale_ToCurrencyString4(const QLocale* self, uint16_t i);
libqt_string QLocale_ToCurrencyString5(const QLocale* self, int i);
libqt_string QLocale_ToCurrencyString6(const QLocale* self, unsigned int i);
libqt_string QLocale_ToCurrencyString7(const QLocale* self, double param1);
libqt_string QLocale_ToCurrencyString8(const QLocale* self, float i);
libqt_string QLocale_FormattedDataSize(const QLocale* self, long long bytes);
QStringList QLocale_UiLanguages(const QLocale* self);
libqt_string QLocale_LanguageToCode(uint16_t language);
libqt_string QLocale_TerritoryToCode(uint16_t territory);
libqt_string QLocale_CountryToCode(uint16_t country);
libqt_string QLocale_ScriptToCode(uint16_t script);
libqt_string QLocale_LanguageToString(uint16_t language);
libqt_string QLocale_TerritoryToString(uint16_t territory);
void QLocale_Delete(QLocale* self);