QtBeef/src/Qt/qlocale.bf

extension CQt
{
	[LinkName("QLocale_new")]
	public static extern QLocale_Ptr* QLocale_new();
	[LinkName("QLocale_new2")]
	public static extern QLocale_Ptr* QLocale_new2(libqt_string name);
	[LinkName("QLocale_new3")]
	public static extern QLocale_Ptr* QLocale_new3(QLocale_Language language, QLocale_Country territory);
	[LinkName("QLocale_new4")]
	public static extern QLocale_Ptr* QLocale_new4(QLocale_Language language);
	[LinkName("QLocale_new5")]
	public static extern QLocale_Ptr* QLocale_new5(QLocale_Ptr* other);
	[LinkName("QLocale_new6")]
	public static extern QLocale_Ptr* QLocale_new6(QLocale_Language language, QLocale_Script script);
	[LinkName("QLocale_new7")]
	public static extern QLocale_Ptr* QLocale_new7(QLocale_Language language, QLocale_Script script, QLocale_Country territory);
	[LinkName("QLocale_Delete")]
	public static extern void QLocale_Delete(QLocale_Ptr* self);
	[LinkName("QLocale_OperatorAssign")]
	public static extern void QLocale_OperatorAssign(QLocale_Ptr* self, QLocale_Ptr* other);
	[LinkName("QLocale_Swap")]
	public static extern void QLocale_Swap(QLocale_Ptr* self, QLocale_Ptr* other);
	[LinkName("QLocale_Language")]
	public static extern QLocale_Language QLocale_Language(QLocale_Ptr* self);
	[LinkName("QLocale_Script")]
	public static extern QLocale_Script QLocale_Script(QLocale_Ptr* self);
	[LinkName("QLocale_Territory")]
	public static extern QLocale_Country QLocale_Territory(QLocale_Ptr* self);
	[LinkName("QLocale_Country")]
	public static extern QLocale_Country QLocale_Country(QLocale_Ptr* self);
	[LinkName("QLocale_Name")]
	public static extern libqt_string QLocale_Name(QLocale_Ptr* self);
	[LinkName("QLocale_Bcp47Name")]
	public static extern libqt_string QLocale_Bcp47Name(QLocale_Ptr* self);
	[LinkName("QLocale_NativeLanguageName")]
	public static extern libqt_string QLocale_NativeLanguageName(QLocale_Ptr* self);
	[LinkName("QLocale_NativeTerritoryName")]
	public static extern libqt_string QLocale_NativeTerritoryName(QLocale_Ptr* self);
	[LinkName("QLocale_NativeCountryName")]
	public static extern libqt_string QLocale_NativeCountryName(QLocale_Ptr* self);
	[LinkName("QLocale_ToShort")]
	public static extern c_ushort QLocale_ToShort(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToUShort")]
	public static extern c_ushort QLocale_ToUShort(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToInt")]
	public static extern c_int QLocale_ToInt(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToUInt")]
	public static extern c_uint QLocale_ToUInt(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToLong")]
	public static extern c_long QLocale_ToLong(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToULong")]
	public static extern c_ulong QLocale_ToULong(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToLongLong")]
	public static extern c_longlong QLocale_ToLongLong(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToULongLong")]
	public static extern c_ulonglong QLocale_ToULongLong(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToFloat")]
	public static extern float QLocale_ToFloat(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToDouble")]
	public static extern double QLocale_ToDouble(QLocale_Ptr* self, libqt_string s);
	[LinkName("QLocale_ToString")]
	public static extern libqt_string QLocale_ToString(QLocale_Ptr* self, c_longlong i);
	[LinkName("QLocale_ToString2")]
	public static extern libqt_string QLocale_ToString2(QLocale_Ptr* self, c_ulonglong i);
	[LinkName("QLocale_ToString3")]
	public static extern libqt_string QLocale_ToString3(QLocale_Ptr* self, c_long i);
	[LinkName("QLocale_ToString4")]
	public static extern libqt_string QLocale_ToString4(QLocale_Ptr* self, c_ulong i);
	[LinkName("QLocale_ToString5")]
	public static extern libqt_string QLocale_ToString5(QLocale_Ptr* self, c_ushort i);
	[LinkName("QLocale_ToString6")]
	public static extern libqt_string QLocale_ToString6(QLocale_Ptr* self, c_ushort i);
	[LinkName("QLocale_ToString7")]
	public static extern libqt_string QLocale_ToString7(QLocale_Ptr* self, c_int i);
	[LinkName("QLocale_ToString8")]
	public static extern libqt_string QLocale_ToString8(QLocale_Ptr* self, c_uint i);
	[LinkName("QLocale_ToString9")]
	public static extern libqt_string QLocale_ToString9(QLocale_Ptr* self, double f);
	[LinkName("QLocale_ToString10")]
	public static extern libqt_string QLocale_ToString10(QLocale_Ptr* self, float f);
	[LinkName("QLocale_ToString11")]
	public static extern libqt_string QLocale_ToString11(QLocale_Ptr* self, QDate_Ptr* date, libqt_string format);
	[LinkName("QLocale_ToString12")]
	public static extern libqt_string QLocale_ToString12(QLocale_Ptr* self, QTime_Ptr* time, libqt_string format);
	[LinkName("QLocale_ToString13")]
	public static extern libqt_string QLocale_ToString13(QLocale_Ptr* self, QDateTime_Ptr* dateTime, libqt_string format);
	[LinkName("QLocale_ToString17")]
	public static extern libqt_string QLocale_ToString17(QLocale_Ptr* self, QDate_Ptr* date);
	[LinkName("QLocale_ToString18")]
	public static extern libqt_string QLocale_ToString18(QLocale_Ptr* self, QTime_Ptr* time);
	[LinkName("QLocale_ToString19")]
	public static extern libqt_string QLocale_ToString19(QLocale_Ptr* self, QDateTime_Ptr* dateTime);
	[LinkName("QLocale_ToString21")]
	public static extern libqt_string QLocale_ToString21(QLocale_Ptr* self, QDate_Ptr* date, QLocale_FormatType format, QCalendar_Ptr* cal);
	[LinkName("QLocale_ToString22")]
	public static extern libqt_string QLocale_ToString22(QLocale_Ptr* self, QDateTime_Ptr* dateTime, QLocale_FormatType format, QCalendar_Ptr* cal);
	[LinkName("QLocale_DateFormat")]
	public static extern libqt_string QLocale_DateFormat(QLocale_Ptr* self);
	[LinkName("QLocale_TimeFormat")]
	public static extern libqt_string QLocale_TimeFormat(QLocale_Ptr* self);
	[LinkName("QLocale_DateTimeFormat")]
	public static extern libqt_string QLocale_DateTimeFormat(QLocale_Ptr* self);
	[LinkName("QLocale_ToDate")]
	public static extern QDate_Ptr* QLocale_ToDate(QLocale_Ptr* self, libqt_string stringVal);
	[LinkName("QLocale_ToTime")]
	public static extern QTime_Ptr* QLocale_ToTime(QLocale_Ptr* self, libqt_string stringVal);
	[LinkName("QLocale_ToDateTime")]
	public static extern QDateTime_Ptr* QLocale_ToDateTime(QLocale_Ptr* self, libqt_string stringVal);
	[LinkName("QLocale_ToDate2")]
	public static extern QDate_Ptr* QLocale_ToDate2(QLocale_Ptr* self, libqt_string stringVal, libqt_string format);
	[LinkName("QLocale_ToTime2")]
	public static extern QTime_Ptr* QLocale_ToTime2(QLocale_Ptr* self, libqt_string stringVal, libqt_string format);
	[LinkName("QLocale_ToDateTime2")]
	public static extern QDateTime_Ptr* QLocale_ToDateTime2(QLocale_Ptr* self, libqt_string stringVal, libqt_string format);
	[LinkName("QLocale_ToDate3")]
	public static extern QDate_Ptr* QLocale_ToDate3(QLocale_Ptr* self, libqt_string stringVal, QLocale_FormatType format, QCalendar_Ptr* cal);
	[LinkName("QLocale_ToDateTime3")]
	public static extern QDateTime_Ptr* QLocale_ToDateTime3(QLocale_Ptr* self, libqt_string stringVal, QLocale_FormatType format, QCalendar_Ptr* cal);
	[LinkName("QLocale_ToDate4")]
	public static extern QDate_Ptr* QLocale_ToDate4(QLocale_Ptr* self, libqt_string stringVal, libqt_string format, QCalendar_Ptr* cal);
	[LinkName("QLocale_ToDateTime4")]
	public static extern QDateTime_Ptr* QLocale_ToDateTime4(QLocale_Ptr* self, libqt_string stringVal, libqt_string format, QCalendar_Ptr* cal);
	[LinkName("QLocale_DecimalPoint")]
	public static extern libqt_string QLocale_DecimalPoint(QLocale_Ptr* self);
	[LinkName("QLocale_GroupSeparator")]
	public static extern libqt_string QLocale_GroupSeparator(QLocale_Ptr* self);
	[LinkName("QLocale_Percent")]
	public static extern libqt_string QLocale_Percent(QLocale_Ptr* self);
	[LinkName("QLocale_ZeroDigit")]
	public static extern libqt_string QLocale_ZeroDigit(QLocale_Ptr* self);
	[LinkName("QLocale_NegativeSign")]
	public static extern libqt_string QLocale_NegativeSign(QLocale_Ptr* self);
	[LinkName("QLocale_PositiveSign")]
	public static extern libqt_string QLocale_PositiveSign(QLocale_Ptr* self);
	[LinkName("QLocale_Exponential")]
	public static extern libqt_string QLocale_Exponential(QLocale_Ptr* self);
	[LinkName("QLocale_MonthName")]
	public static extern libqt_string QLocale_MonthName(QLocale_Ptr* self, c_int param1);
	[LinkName("QLocale_StandaloneMonthName")]
	public static extern libqt_string QLocale_StandaloneMonthName(QLocale_Ptr* self, c_int param1);
	[LinkName("QLocale_DayName")]
	public static extern libqt_string QLocale_DayName(QLocale_Ptr* self, c_int param1);
	[LinkName("QLocale_StandaloneDayName")]
	public static extern libqt_string QLocale_StandaloneDayName(QLocale_Ptr* self, c_int param1);
	[LinkName("QLocale_FirstDayOfWeek")]
	public static extern Qt_DayOfWeek QLocale_FirstDayOfWeek(QLocale_Ptr* self);
	[LinkName("QLocale_Weekdays")]
	public static extern void* QLocale_Weekdays(QLocale_Ptr* self);
	[LinkName("QLocale_AmText")]
	public static extern libqt_string QLocale_AmText(QLocale_Ptr* self);
	[LinkName("QLocale_PmText")]
	public static extern libqt_string QLocale_PmText(QLocale_Ptr* self);
	[LinkName("QLocale_MeasurementSystem")]
	public static extern QLocale_MeasurementSystem QLocale_MeasurementSystem(QLocale_Ptr* self);
	[LinkName("QLocale_Collation")]
	public static extern QLocale_Ptr* QLocale_Collation(QLocale_Ptr* self);
	[LinkName("QLocale_TextDirection")]
	public static extern Qt_LayoutDirection QLocale_TextDirection(QLocale_Ptr* self);
	[LinkName("QLocale_ToUpper")]
	public static extern libqt_string QLocale_ToUpper(QLocale_Ptr* self, libqt_string str);
	[LinkName("QLocale_ToLower")]
	public static extern libqt_string QLocale_ToLower(QLocale_Ptr* self, libqt_string str);
	[LinkName("QLocale_CurrencySymbol")]
	public static extern libqt_string QLocale_CurrencySymbol(QLocale_Ptr* self);
	[LinkName("QLocale_ToCurrencyString")]
	public static extern libqt_string QLocale_ToCurrencyString(QLocale_Ptr* self, c_longlong param1);
	[LinkName("QLocale_ToCurrencyString2")]
	public static extern libqt_string QLocale_ToCurrencyString2(QLocale_Ptr* self, c_ulonglong param1);
	[LinkName("QLocale_ToCurrencyString3")]
	public static extern libqt_string QLocale_ToCurrencyString3(QLocale_Ptr* self, c_ushort i);
	[LinkName("QLocale_ToCurrencyString4")]
	public static extern libqt_string QLocale_ToCurrencyString4(QLocale_Ptr* self, c_ushort i);
	[LinkName("QLocale_ToCurrencyString5")]
	public static extern libqt_string QLocale_ToCurrencyString5(QLocale_Ptr* self, c_int i);
	[LinkName("QLocale_ToCurrencyString6")]
	public static extern libqt_string QLocale_ToCurrencyString6(QLocale_Ptr* self, c_uint i);
	[LinkName("QLocale_ToCurrencyString7")]
	public static extern libqt_string QLocale_ToCurrencyString7(QLocale_Ptr* self, double param1);
	[LinkName("QLocale_ToCurrencyString8")]
	public static extern libqt_string QLocale_ToCurrencyString8(QLocale_Ptr* self, float i);
	[LinkName("QLocale_FormattedDataSize")]
	public static extern libqt_string QLocale_FormattedDataSize(QLocale_Ptr* self, c_longlong bytes);
	[LinkName("QLocale_UiLanguages")]
	public static extern void* QLocale_UiLanguages(QLocale_Ptr* self);
	[LinkName("QLocale_LanguageToCode")]
	public static extern libqt_string QLocale_LanguageToCode(QLocale_Language language);
	[LinkName("QLocale_TerritoryToCode")]
	public static extern libqt_string QLocale_TerritoryToCode(QLocale_Country territory);
	[LinkName("QLocale_CountryToCode")]
	public static extern libqt_string QLocale_CountryToCode(QLocale_Country country);
	[LinkName("QLocale_ScriptToCode")]
	public static extern libqt_string QLocale_ScriptToCode(QLocale_Script script);
	[LinkName("QLocale_LanguageToString")]
	public static extern libqt_string QLocale_LanguageToString(QLocale_Language language);
	[LinkName("QLocale_TerritoryToString")]
	public static extern libqt_string QLocale_TerritoryToString(QLocale_Country territory);
